--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   "dependencies": {
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
-    "dotenv": "^14.3.1",
+    "dotenv": "^14.3.2",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
     "pgtools": "^0.3.2",
     "sprintf-js": "^1.1.2"
