--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "a simple social media platform",
 	"main": "server.js",
 	"scripts": {
-		"test": "nodemon server"
+		"test": "nodemon server",
+		"start": "node server"
 	},
 	"repository": {
 		"type": "git",
